Etapa5/y.output
Terminals which are not used

   TOKEN_ERROR
   OPERATOR_NOT


State 54 conflicts: 1 reduce/reduce
State 122 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: declaracoes_globais

    2 declaracoes_globais: lista_decl lista_codigo

    3 lista_decl: decl_var lista_decl
    4           | decl_vetor lista_decl
    5           | decl_proto lista_decl
    6           | /* empty */

    7 decl_var: tipo TK_IDENTIFIER '=' literal ';'

    8 decl_vetor: tipo TK_IDENTIFIER '[' LIT_INT ']' opcional ';'

    9 decl_proto: tipo TK_IDENTIFIER '(' parametros_formais ')' ';'

   10 opcional: literal opcional
   11         | /* empty */

   12 parametros_formais: parametro_formal parametros_formais_fim
   13                   | /* empty */

   14 parametros_formais_fim: ',' parametro_formal parametros_formais_fim
   15                       | /* empty */

   16 parametro_formal: tipo TK_IDENTIFIER

   17 lista_codigo: decl_func lista_codigo
   18             | /* empty */

   19 decl_func: KW_CODE TK_IDENTIFIER comando

   20 bloco: '{' lista_comandos '}'

   21 lista_comandos: comando lista_comandos
   22               | /* empty */

   23 comando: bloco
   24        | comando_atribuicao
   25        | comando_print
   26        | comando_fluxo
   27        | comando_return
   28        | ';'

   29 comando_fluxo: comando_if
   30              | KW_WHILE '(' expressao ')' comando

   31 comando_if: KW_IF '(' expressao ')' comando comando_else

   32 comando_else: KW_ELSE comando
   33             | /* empty */

   34 comando_return: KW_RETURN expressao ';'

   35 comando_atribuicao: TK_IDENTIFIER '=' expressao ';'
   36                   | TK_IDENTIFIER '[' expressao ']' '=' expressao ';'

   37 comando_print: KW_PRINT comando_printResto ';'

   38 comando_printResto: LIT_STRING
   39                   | expressao

   40 expressao: TK_IDENTIFIER
   41          | TK_IDENTIFIER '[' expressao ']'
   42          | TK_IDENTIFIER '(' lista_argumentos ')'
   43          | LIT_INT
   44          | LIT_REAL
   45          | LIT_CHAR
   46          | LIT_STRING
   47          | KW_INPUT '(' tipo ')'
   48          | expressao '+' expressao
   49          | expressao '-' expressao
   50          | expressao '*' expressao
   51          | expressao '/' expressao
   52          | expressao '<' expressao
   53          | expressao '>' expressao
   54          | expressao OPERATOR_AND expressao
   55          | expressao OPERATOR_OR expressao
   56          | expressao OPERATOR_LE expressao
   57          | expressao OPERATOR_GE expressao
   58          | expressao OPERATOR_EQ expressao
   59          | expressao OPERATOR_DIF expressao
   60          | '(' expressao ')'

   61 lista_argumentos: /* empty */
   62                 | expressao lista_argumentos_fim

   63 lista_argumentos_fim: /* empty */
   64                     | ',' expressao lista_argumentos_fim

   65 literal: LIT_INT
   66        | LIT_REAL
   67        | LIT_CHAR
   68        | LIT_STRING

   69 tipo: KW_INT
   70     | KW_FLOAT
   71     | KW_CHAR


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 30 31 42 47 60
')' (41) 9 30 31 42 47 60
'*' (42) 50
'+' (43) 48
',' (44) 14 64
'-' (45) 49
'/' (47) 51
';' (59) 7 8 9 28 34 35 36 37
'<' (60) 52
'=' (61) 7 35 36
'>' (62) 53
'[' (91) 8 36 41
']' (93) 8 36 41
'{' (123) 20
'}' (125) 20
error (256)
KW_INT (258) 69
KW_FLOAT (259) 70
KW_CHAR (260) 71
KW_CODE (261) 19
KW_IF (262) 31
KW_ELSE (263) 32
KW_WHILE (264) 30
KW_PRINT (265) 37
KW_RETURN (266) 34
KW_INPUT (267) 47
OPERATOR_LE (268) 56
OPERATOR_GE (269) 57
OPERATOR_EQ (270) 58
OPERATOR_DIF (271) 59
TK_IDENTIFIER (272) 7 8 9 16 19 35 36 40 41 42
LIT_INT (273) 8 43 65
LIT_REAL (274) 44 66
LIT_CHAR (275) 45 67
LIT_STRING (276) 38 46 68
TOKEN_ERROR (277)
OPERATOR_NOT (278)
OPERATOR_AND (279) 54
OPERATOR_OR (280) 55


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
programa (42)
    on left: 1, on right: 0
declaracoes_globais (43)
    on left: 2, on right: 1
lista_decl (44)
    on left: 3 4 5 6, on right: 2 3 4 5
decl_var (45)
    on left: 7, on right: 3
decl_vetor (46)
    on left: 8, on right: 4
decl_proto (47)
    on left: 9, on right: 5
opcional (48)
    on left: 10 11, on right: 8 10
parametros_formais (49)
    on left: 12 13, on right: 9
parametros_formais_fim (50)
    on left: 14 15, on right: 12 14
parametro_formal (51)
    on left: 16, on right: 12 14
lista_codigo (52)
    on left: 17 18, on right: 2 17
decl_func (53)
    on left: 19, on right: 17
bloco (54)
    on left: 20, on right: 23
lista_comandos (55)
    on left: 21 22, on right: 20 21
comando (56)
    on left: 23 24 25 26 27 28, on right: 19 21 30 31 32
comando_fluxo (57)
    on left: 29 30, on right: 26
comando_if (58)
    on left: 31, on right: 29
comando_else (59)
    on left: 32 33, on right: 31
comando_return (60)
    on left: 34, on right: 27
comando_atribuicao (61)
    on left: 35 36, on right: 24
comando_print (62)
    on left: 37, on right: 25
comando_printResto (63)
    on left: 38 39, on right: 37
expressao (64)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60, on right: 30 31 34 35 36 39 41 48 49 50 51 52 53 54 55
    56 57 58 59 60 62 64
lista_argumentos (65)
    on left: 61 62, on right: 42
lista_argumentos_fim (66)
    on left: 63 64, on right: 62 64
literal (67)
    on left: 65 66 67 68, on right: 7 10
tipo (68)
    on left: 69 70 71, on right: 7 8 9 16 47


state 0

    0 $accept: . programa $end

    KW_INT    shift, and go to state 1
    KW_FLOAT  shift, and go to state 2
    KW_CHAR   shift, and go to state 3

    $default  reduce using rule 6 (lista_decl)

    programa             go to state 4
    declaracoes_globais  go to state 5
    lista_decl           go to state 6
    decl_var             go to state 7
    decl_vetor           go to state 8
    decl_proto           go to state 9
    tipo                 go to state 10


state 1

   69 tipo: KW_INT .

    $default  reduce using rule 69 (tipo)


state 2

   70 tipo: KW_FLOAT .

    $default  reduce using rule 70 (tipo)


state 3

   71 tipo: KW_CHAR .

    $default  reduce using rule 71 (tipo)


state 4

    0 $accept: programa . $end

    $end  shift, and go to state 11


state 5

    1 programa: declaracoes_globais .

    $default  reduce using rule 1 (programa)


state 6

    2 declaracoes_globais: lista_decl . lista_codigo

    KW_CODE  shift, and go to state 12

    $default  reduce using rule 18 (lista_codigo)

    lista_codigo  go to state 13
    decl_func     go to state 14


state 7

    3 lista_decl: decl_var . lista_decl

    KW_INT    shift, and go to state 1
    KW_FLOAT  shift, and go to state 2
    KW_CHAR   shift, and go to state 3

    $default  reduce using rule 6 (lista_decl)

    lista_decl  go to state 15
    decl_var    go to state 7
    decl_vetor  go to state 8
    decl_proto  go to state 9
    tipo        go to state 10


state 8

    4 lista_decl: decl_vetor . lista_decl

    KW_INT    shift, and go to state 1
    KW_FLOAT  shift, and go to state 2
    KW_CHAR   shift, and go to state 3

    $default  reduce using rule 6 (lista_decl)

    lista_decl  go to state 16
    decl_var    go to state 7
    decl_vetor  go to state 8
    decl_proto  go to state 9
    tipo        go to state 10


state 9

    5 lista_decl: decl_proto . lista_decl

    KW_INT    shift, and go to state 1
    KW_FLOAT  shift, and go to state 2
    KW_CHAR   shift, and go to state 3

    $default  reduce using rule 6 (lista_decl)

    lista_decl  go to state 17
    decl_var    go to state 7
    decl_vetor  go to state 8
    decl_proto  go to state 9
    tipo        go to state 10


state 10

    7 decl_var: tipo . TK_IDENTIFIER '=' literal ';'
    8 decl_vetor: tipo . TK_IDENTIFIER '[' LIT_INT ']' opcional ';'
    9 decl_proto: tipo . TK_IDENTIFIER '(' parametros_formais ')' ';'

    TK_IDENTIFIER  shift, and go to state 18


state 11

    0 $accept: programa $end .

    $default  accept


state 12

   19 decl_func: KW_CODE . TK_IDENTIFIER comando

    TK_IDENTIFIER  shift, and go to state 19


state 13

    2 declaracoes_globais: lista_decl lista_codigo .

    $default  reduce using rule 2 (declaracoes_globais)


state 14

   17 lista_codigo: decl_func . lista_codigo

    KW_CODE  shift, and go to state 12

    $default  reduce using rule 18 (lista_codigo)

    lista_codigo  go to state 20
    decl_func     go to state 14


state 15

    3 lista_decl: decl_var lista_decl .

    $default  reduce using rule 3 (lista_decl)


state 16

    4 lista_decl: decl_vetor lista_decl .

    $default  reduce using rule 4 (lista_decl)


state 17

    5 lista_decl: decl_proto lista_decl .

    $default  reduce using rule 5 (lista_decl)


state 18

    7 decl_var: tipo TK_IDENTIFIER . '=' literal ';'
    8 decl_vetor: tipo TK_IDENTIFIER . '[' LIT_INT ']' opcional ';'
    9 decl_proto: tipo TK_IDENTIFIER . '(' parametros_formais ')' ';'

    '='  shift, and go to state 21
    '['  shift, and go to state 22
    '('  shift, and go to state 23


state 19

   19 decl_func: KW_CODE TK_IDENTIFIER . comando

    KW_IF          shift, and go to state 24
    KW_WHILE       shift, and go to state 25
    KW_PRINT       shift, and go to state 26
    KW_RETURN      shift, and go to state 27
    TK_IDENTIFIER  shift, and go to state 28
    ';'            shift, and go to state 29
    '{'            shift, and go to state 30

    bloco               go to state 31
    comando             go to state 32
    comando_fluxo       go to state 33
    comando_if          go to state 34
    comando_return      go to state 35
    comando_atribuicao  go to state 36
    comando_print       go to state 37


state 20

   17 lista_codigo: decl_func lista_codigo .

    $default  reduce using rule 17 (lista_codigo)


state 21

    7 decl_var: tipo TK_IDENTIFIER '=' . literal ';'

    LIT_INT     shift, and go to state 38
    LIT_REAL    shift, and go to state 39
    LIT_CHAR    shift, and go to state 40
    LIT_STRING  shift, and go to state 41

    literal  go to state 42


state 22

    8 decl_vetor: tipo TK_IDENTIFIER '[' . LIT_INT ']' opcional ';'

    LIT_INT  shift, and go to state 43


state 23

    9 decl_proto: tipo TK_IDENTIFIER '(' . parametros_formais ')' ';'

    KW_INT    shift, and go to state 1
    KW_FLOAT  shift, and go to state 2
    KW_CHAR   shift, and go to state 3

    $default  reduce using rule 13 (parametros_formais)

    parametros_formais  go to state 44
    parametro_formal    go to state 45
    tipo                go to state 46


state 24

   31 comando_if: KW_IF . '(' expressao ')' comando comando_else

    '('  shift, and go to state 47


state 25

   30 comando_fluxo: KW_WHILE . '(' expressao ')' comando

    '('  shift, and go to state 48


state 26

   37 comando_print: KW_PRINT . comando_printResto ';'

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 54
    '('            shift, and go to state 55

    comando_printResto  go to state 56
    expressao           go to state 57


state 27

   34 comando_return: KW_RETURN . expressao ';'

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 59


state 28

   35 comando_atribuicao: TK_IDENTIFIER . '=' expressao ';'
   36                   | TK_IDENTIFIER . '[' expressao ']' '=' expressao ';'

    '='  shift, and go to state 60
    '['  shift, and go to state 61


state 29

   28 comando: ';' .

    $default  reduce using rule 28 (comando)


state 30

   20 bloco: '{' . lista_comandos '}'

    KW_IF          shift, and go to state 24
    KW_WHILE       shift, and go to state 25
    KW_PRINT       shift, and go to state 26
    KW_RETURN      shift, and go to state 27
    TK_IDENTIFIER  shift, and go to state 28
    ';'            shift, and go to state 29
    '{'            shift, and go to state 30

    $default  reduce using rule 22 (lista_comandos)

    bloco               go to state 31
    lista_comandos      go to state 62
    comando             go to state 63
    comando_fluxo       go to state 33
    comando_if          go to state 34
    comando_return      go to state 35
    comando_atribuicao  go to state 36
    comando_print       go to state 37


state 31

   23 comando: bloco .

    $default  reduce using rule 23 (comando)


state 32

   19 decl_func: KW_CODE TK_IDENTIFIER comando .

    $default  reduce using rule 19 (decl_func)


state 33

   26 comando: comando_fluxo .

    $default  reduce using rule 26 (comando)


state 34

   29 comando_fluxo: comando_if .

    $default  reduce using rule 29 (comando_fluxo)


state 35

   27 comando: comando_return .

    $default  reduce using rule 27 (comando)


state 36

   24 comando: comando_atribuicao .

    $default  reduce using rule 24 (comando)


state 37

   25 comando: comando_print .

    $default  reduce using rule 25 (comando)


state 38

   65 literal: LIT_INT .

    $default  reduce using rule 65 (literal)


state 39

   66 literal: LIT_REAL .

    $default  reduce using rule 66 (literal)


state 40

   67 literal: LIT_CHAR .

    $default  reduce using rule 67 (literal)


state 41

   68 literal: LIT_STRING .

    $default  reduce using rule 68 (literal)


state 42

    7 decl_var: tipo TK_IDENTIFIER '=' literal . ';'

    ';'  shift, and go to state 64


state 43

    8 decl_vetor: tipo TK_IDENTIFIER '[' LIT_INT . ']' opcional ';'

    ']'  shift, and go to state 65


state 44

    9 decl_proto: tipo TK_IDENTIFIER '(' parametros_formais . ')' ';'

    ')'  shift, and go to state 66


state 45

   12 parametros_formais: parametro_formal . parametros_formais_fim

    ','  shift, and go to state 67

    $default  reduce using rule 15 (parametros_formais_fim)

    parametros_formais_fim  go to state 68


state 46

   16 parametro_formal: tipo . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 69


state 47

   31 comando_if: KW_IF '(' . expressao ')' comando comando_else

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 70


state 48

   30 comando_fluxo: KW_WHILE '(' . expressao ')' comando

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 71


state 49

   47 expressao: KW_INPUT . '(' tipo ')'

    '('  shift, and go to state 72


state 50

   40 expressao: TK_IDENTIFIER .
   41          | TK_IDENTIFIER . '[' expressao ']'
   42          | TK_IDENTIFIER . '(' lista_argumentos ')'

    '['  shift, and go to state 73
    '('  shift, and go to state 74

    $default  reduce using rule 40 (expressao)


state 51

   43 expressao: LIT_INT .

    $default  reduce using rule 43 (expressao)


state 52

   44 expressao: LIT_REAL .

    $default  reduce using rule 44 (expressao)


state 53

   45 expressao: LIT_CHAR .

    $default  reduce using rule 45 (expressao)


state 54

   38 comando_printResto: LIT_STRING .
   46 expressao: LIT_STRING .

    ';'       reduce using rule 38 (comando_printResto)
    ';'       [reduce using rule 46 (expressao)]
    $default  reduce using rule 46 (expressao)


state 55

   60 expressao: '(' . expressao ')'

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 75


state 56

   37 comando_print: KW_PRINT comando_printResto . ';'

    ';'  shift, and go to state 76


state 57

   39 comando_printResto: expressao .
   48 expressao: expressao . '+' expressao
   49          | expressao . '-' expressao
   50          | expressao . '*' expressao
   51          | expressao . '/' expressao
   52          | expressao . '<' expressao
   53          | expressao . '>' expressao
   54          | expressao . OPERATOR_AND expressao
   55          | expressao . OPERATOR_OR expressao
   56          | expressao . OPERATOR_LE expressao
   57          | expressao . OPERATOR_GE expressao
   58          | expressao . OPERATOR_EQ expressao
   59          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 77
    OPERATOR_GE   shift, and go to state 78
    OPERATOR_EQ   shift, and go to state 79
    OPERATOR_DIF  shift, and go to state 80
    OPERATOR_AND  shift, and go to state 81
    OPERATOR_OR   shift, and go to state 82
    '<'           shift, and go to state 83
    '>'           shift, and go to state 84
    '+'           shift, and go to state 85
    '-'           shift, and go to state 86
    '*'           shift, and go to state 87
    '/'           shift, and go to state 88

    $default  reduce using rule 39 (comando_printResto)


state 58

   46 expressao: LIT_STRING .

    $default  reduce using rule 46 (expressao)


state 59

   34 comando_return: KW_RETURN expressao . ';'
   48 expressao: expressao . '+' expressao
   49          | expressao . '-' expressao
   50          | expressao . '*' expressao
   51          | expressao . '/' expressao
   52          | expressao . '<' expressao
   53          | expressao . '>' expressao
   54          | expressao . OPERATOR_AND expressao
   55          | expressao . OPERATOR_OR expressao
   56          | expressao . OPERATOR_LE expressao
   57          | expressao . OPERATOR_GE expressao
   58          | expressao . OPERATOR_EQ expressao
   59          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 77
    OPERATOR_GE   shift, and go to state 78
    OPERATOR_EQ   shift, and go to state 79
    OPERATOR_DIF  shift, and go to state 80
    OPERATOR_AND  shift, and go to state 81
    OPERATOR_OR   shift, and go to state 82
    '<'           shift, and go to state 83
    '>'           shift, and go to state 84
    '+'           shift, and go to state 85
    '-'           shift, and go to state 86
    '*'           shift, and go to state 87
    '/'           shift, and go to state 88
    ';'           shift, and go to state 89


state 60

   35 comando_atribuicao: TK_IDENTIFIER '=' . expressao ';'

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 90


state 61

   36 comando_atribuicao: TK_IDENTIFIER '[' . expressao ']' '=' expressao ';'

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 91


state 62

   20 bloco: '{' lista_comandos . '}'

    '}'  shift, and go to state 92


state 63

   21 lista_comandos: comando . lista_comandos

    KW_IF          shift, and go to state 24
    KW_WHILE       shift, and go to state 25
    KW_PRINT       shift, and go to state 26
    KW_RETURN      shift, and go to state 27
    TK_IDENTIFIER  shift, and go to state 28
    ';'            shift, and go to state 29
    '{'            shift, and go to state 30

    $default  reduce using rule 22 (lista_comandos)

    bloco               go to state 31
    lista_comandos      go to state 93
    comando             go to state 63
    comando_fluxo       go to state 33
    comando_if          go to state 34
    comando_return      go to state 35
    comando_atribuicao  go to state 36
    comando_print       go to state 37


state 64

    7 decl_var: tipo TK_IDENTIFIER '=' literal ';' .

    $default  reduce using rule 7 (decl_var)


state 65

    8 decl_vetor: tipo TK_IDENTIFIER '[' LIT_INT ']' . opcional ';'

    LIT_INT     shift, and go to state 38
    LIT_REAL    shift, and go to state 39
    LIT_CHAR    shift, and go to state 40
    LIT_STRING  shift, and go to state 41

    $default  reduce using rule 11 (opcional)

    opcional  go to state 94
    literal   go to state 95


state 66

    9 decl_proto: tipo TK_IDENTIFIER '(' parametros_formais ')' . ';'

    ';'  shift, and go to state 96


state 67

   14 parametros_formais_fim: ',' . parametro_formal parametros_formais_fim

    KW_INT    shift, and go to state 1
    KW_FLOAT  shift, and go to state 2
    KW_CHAR   shift, and go to state 3

    parametro_formal  go to state 97
    tipo              go to state 46


state 68

   12 parametros_formais: parametro_formal parametros_formais_fim .

    $default  reduce using rule 12 (parametros_formais)


state 69

   16 parametro_formal: tipo TK_IDENTIFIER .

    $default  reduce using rule 16 (parametro_formal)


state 70

   31 comando_if: KW_IF '(' expressao . ')' comando comando_else
   48 expressao: expressao . '+' expressao
   49          | expressao . '-' expressao
   50          | expressao . '*' expressao
   51          | expressao . '/' expressao
   52          | expressao . '<' expressao
   53          | expressao . '>' expressao
   54          | expressao . OPERATOR_AND expressao
   55          | expressao . OPERATOR_OR expressao
   56          | expressao . OPERATOR_LE expressao
   57          | expressao . OPERATOR_GE expressao
   58          | expressao . OPERATOR_EQ expressao
   59          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 77
    OPERATOR_GE   shift, and go to state 78
    OPERATOR_EQ   shift, and go to state 79
    OPERATOR_DIF  shift, and go to state 80
    OPERATOR_AND  shift, and go to state 81
    OPERATOR_OR   shift, and go to state 82
    '<'           shift, and go to state 83
    '>'           shift, and go to state 84
    '+'           shift, and go to state 85
    '-'           shift, and go to state 86
    '*'           shift, and go to state 87
    '/'           shift, and go to state 88
    ')'           shift, and go to state 98


state 71

   30 comando_fluxo: KW_WHILE '(' expressao . ')' comando
   48 expressao: expressao . '+' expressao
   49          | expressao . '-' expressao
   50          | expressao . '*' expressao
   51          | expressao . '/' expressao
   52          | expressao . '<' expressao
   53          | expressao . '>' expressao
   54          | expressao . OPERATOR_AND expressao
   55          | expressao . OPERATOR_OR expressao
   56          | expressao . OPERATOR_LE expressao
   57          | expressao . OPERATOR_GE expressao
   58          | expressao . OPERATOR_EQ expressao
   59          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 77
    OPERATOR_GE   shift, and go to state 78
    OPERATOR_EQ   shift, and go to state 79
    OPERATOR_DIF  shift, and go to state 80
    OPERATOR_AND  shift, and go to state 81
    OPERATOR_OR   shift, and go to state 82
    '<'           shift, and go to state 83
    '>'           shift, and go to state 84
    '+'           shift, and go to state 85
    '-'           shift, and go to state 86
    '*'           shift, and go to state 87
    '/'           shift, and go to state 88
    ')'           shift, and go to state 99


state 72

   47 expressao: KW_INPUT '(' . tipo ')'

    KW_INT    shift, and go to state 1
    KW_FLOAT  shift, and go to state 2
    KW_CHAR   shift, and go to state 3

    tipo  go to state 100


state 73

   41 expressao: TK_IDENTIFIER '[' . expressao ']'

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 101


state 74

   42 expressao: TK_IDENTIFIER '(' . lista_argumentos ')'

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    $default  reduce using rule 61 (lista_argumentos)

    expressao         go to state 102
    lista_argumentos  go to state 103


state 75

   48 expressao: expressao . '+' expressao
   49          | expressao . '-' expressao
   50          | expressao . '*' expressao
   51          | expressao . '/' expressao
   52          | expressao . '<' expressao
   53          | expressao . '>' expressao
   54          | expressao . OPERATOR_AND expressao
   55          | expressao . OPERATOR_OR expressao
   56          | expressao . OPERATOR_LE expressao
   57          | expressao . OPERATOR_GE expressao
   58          | expressao . OPERATOR_EQ expressao
   59          | expressao . OPERATOR_DIF expressao
   60          | '(' expressao . ')'

    OPERATOR_LE   shift, and go to state 77
    OPERATOR_GE   shift, and go to state 78
    OPERATOR_EQ   shift, and go to state 79
    OPERATOR_DIF  shift, and go to state 80
    OPERATOR_AND  shift, and go to state 81
    OPERATOR_OR   shift, and go to state 82
    '<'           shift, and go to state 83
    '>'           shift, and go to state 84
    '+'           shift, and go to state 85
    '-'           shift, and go to state 86
    '*'           shift, and go to state 87
    '/'           shift, and go to state 88
    ')'           shift, and go to state 104


state 76

   37 comando_print: KW_PRINT comando_printResto ';' .

    $default  reduce using rule 37 (comando_print)


state 77

   56 expressao: expressao OPERATOR_LE . expressao

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 105


state 78

   57 expressao: expressao OPERATOR_GE . expressao

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 106


state 79

   58 expressao: expressao OPERATOR_EQ . expressao

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 107


state 80

   59 expressao: expressao OPERATOR_DIF . expressao

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 108


state 81

   54 expressao: expressao OPERATOR_AND . expressao

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 109


state 82

   55 expressao: expressao OPERATOR_OR . expressao

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 110


state 83

   52 expressao: expressao '<' . expressao

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 111


state 84

   53 expressao: expressao '>' . expressao

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 112


state 85

   48 expressao: expressao '+' . expressao

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 113


state 86

   49 expressao: expressao '-' . expressao

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 114


state 87

   50 expressao: expressao '*' . expressao

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 115


state 88

   51 expressao: expressao '/' . expressao

    KW_INPUT       shift, and go to state 49
    TK_IDENTIFIER  shift, and go to state 50
    LIT_INT        shift, and go to state 51
    LIT_REAL       shift, and go to state 52
    LIT_CHAR       shift, and go to state 53
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 55

    expressao  go to state 116


state 89

   34 comando_return: KW_RETURN expressao ';' .

    $default  reduce using rule 34 (comando_return)


state 90

   35 comando_atribuicao: TK_IDENTIFIER '=' expressao . ';'
   48 expressao: expressao . '+' expressao
   49          | expressao . '-' expressao
   50          | expressao . '*' expressao
   51          | expressao . '/' expressao
   52          | expressao . '<' expressao
   53          | expressao . '>' expressao
   54          | expressao . OPERATOR_AND expressao
   55          | expressao . OPERATOR_OR expressao
   56          | expressao . OPERATOR_LE expressao
   57          | expressao . OPERATOR_GE expressao
   58          | expressao . OPERATOR_EQ expressao
   59          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 77
    OPERATOR_GE   shift, and go to state 78
    OPERATOR_EQ   shift, and go to state 79
    OPERATOR_DIF  shift, and go to state 80
    OPERATOR_AND  shift, and go to state 81
    OPERATOR_OR   shift, and go to state 82
    '<'           shift, and go to state 83
    '>'           shift, and go to state 84
    '+'           shift, and go to state 85
    '-'           shift, and go to state 86
    '*'           shift, and go to state 87
    '/'           shift, and go to state 88
    ';'           shift, and go to state 117


state 91

   36 comando_atribuicao: TK_IDENTIFIER '[' expressao . ']' '=' expressao ';'
   48 expressao: expressao . '+' expressao
   49          | expressao . '-' expressao
   50          | expressao . '*' expressao
   51          | expressao . '/' expressao
   52          | expressao . '<' expressao
   53          | expressao . '>' expressao
   54          | expressao . OPERATOR_AND expressao
   55          | expressao . OPERATOR_OR expressao
   56          | expressao . OPERATOR_LE expressao
   57          | expressao . OPERATOR_GE expressao
   58          | expressao . OPERATOR_EQ expressao
   59          | expressao . OPERATOR_DIF expressao
